--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,11 @@ unbind C-b
 set -g prefix ^Z
 bind z send-prefix
 
+unbind r
+## bind r source-file ~/.tmux.conf (J\;(B display-message "Reload Config!!"
+## bind-key C-r source-file ~/.tmux.conf \; display-message "Reloaded."
+bind-key r source-file ~/.tmux.conf \; display-message "Reloaded."
+
 # Bind appropriate commands similar to screen.
 # lockscreen ^X x 
 unbind ^X
@@ -72,14 +77,20 @@ unbind w
 bind w list-windows
 
 # quit \ 
-unbind \
-bind \ confirm-before "kill-server"
+## unbind \\
+## bind \\ confirm-before "kill-server"
 
 # kill K k 
 unbind K
 bind K confirm-before "kill-window"
 unbind k
 bind k confirm-before "kill-window"
+
+# kill K k 
+unbind E
+bind E setw synchronize-panes off
+unbind e
+bind e setw synchronize-panes on
 
 # redisplay ^L l 
 unbind ^L
