久々のコミット

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -g prefix ^Z
 bind z send-prefix
 
 unbind r
-## bind r source-file ~/.tmux.conf \; display-message "Reload Config!!"
+## bind r source-file ~/.tmux.conf \; display-message "Reload Config!!"
 ## bind-key C-r source-file ~/.tmux.conf \; display-message "Reloaded."
 bind-key r source-file ~/.tmux.conf \; display-message "Reloaded."
 
@@ -111,3 +111,9 @@ bind BTab select-pane -t:.-
 # " windowlist -b
 unbind '"'
 bind '"' choose-window
+
+## 起動時に tmux で使用するデフォルトシェルを変更する
+
+set-option -g default-shell /bin/zsh
+
+set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
