--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,3 +117,20 @@ bind '"' choose-window
 set-option -g default-shell /bin/zsh
 
 set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
+
+
+# Vi B%-!<%P%$%s%I
+set-window-option -g mode-keys vi
+
+# Prefix+v B$G%3%T!<%b!<%I3+;O
+#bind-key v copy-mode \; display "Copy mode!"
+#bind-key -t vi-copy v begin-selection
+
+# Prefix+Enter/y B$G%3%T!<
+##bind-key -t vi-copy / copy-pipe "reattach-to-user-namespace pbcopy"
+##bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Prefix+p B$G%Z!<%9%H
+# B%/%j%C%W%\!<%I$K$bJ]B8$5$l$F$$$k$N$G Cmd-v B$G$b%Z!<%9%H2DG=
+bind-key p paste-buffer
+
