Update tmux.conf && w3m Bookmarks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -120,7 +120,7 @@ set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
 
 
 # Vi B%-!<%P%$%s%I
-set-window-option -g mode-keys vi
+## set-window-option -g mode-keys vi
 
 # Prefix+v B$G%3%T!<%b!<%I3+;O
 #bind-key v copy-mode \; display "Copy mode!"
@@ -132,5 +132,21 @@ set-window-option -g mode-keys vi
 
 # Prefix+p B$G%Z!<%9%H
 # B%/%j%C%W%\!<%I$K$bJ]B8$5$l$F$$$k$N$G Cmd-v B$G$b%Z!<%9%H2DG=
-bind-key p paste-buffer
+## bind-key p paste-buffer
 
+
+## Mac Specific Settings:
+#-------------------------------------------------------------------
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#-------------------------------------------------------------------
